--- a/experience.html
+++ b/experience.html
@@ -73,7 +73,7 @@
                     <a href="https://www.dukehealth.org/locations/duke-eye-center" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Click to learn about the Duke Eye Center</a>
                 </article>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Performs OCT, visual field, cataract biometry testing, and slit lamp exams</li>
+                    <li class="col-12 col-sm-12">Performs retinal and optic nerve imaging, visual field, cataract biometry testing, and slit lamp exams</li>
                     <li class="col-12 col-sm-12">Supports patients with low vision by optimizing testing and documentation</li>
                     <li class="col-12 col-sm-12">Assists physicians in high-volume retina and glaucoma clinics</li>
                     <li class="col-12 col-sm-12">Manages urgent cases with adaptability</li>
@@ -94,10 +94,10 @@
                     <a href="https://www.dukehealth.org/volunteer-services" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Volunteer at the Duke University Hospital</a>
                 </article>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Awarded “2025 Most Supportive Volunteer” by Duke Hospital</li>
+                    <li class="col-12 col-sm-12">Awarded “2025 Most Supportive Volunteer” by the Duke University Hospital</li>
                     <li class="col-12 col-sm-12">Supports patient experience on two hospital units by stocking 32 rooms, providing snacks, assisting with meals, and communicating patient needs to nurses</li>
                     <li class="col-12 col-sm-12">Builds rapport with patients through conversation and companionship</li>
-                    <li class="col-12 col-sm-12">Organizes morale-boosting games for nurses and serves as a supportive presence during demanding shifts</li>
+                    <li class="col-12 col-sm-12">Organizes morale-boosting activities for nurses and serves as a supportive presence during demanding shifts</li>
                 </ul>
             </article>
 
@@ -114,7 +114,7 @@
                     <a href="https://stephenawenzel.github.io/photography/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View Stephen Wenzel Photography</a>
                 </article>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Operates a self-run photography business focused on portraits, landscapes, wildlife, and fine art</li>
+                    <li class="col-12 col-sm-12">Operates a self-run photography business in portraits and fine art</li>
                     <li class="col-12 col-sm-12">Collaborates with clients to create personalized images and edits using Adobe Lightroom and Photoshop</li>
                     <li class="col-12 col-sm-12">Manages a custom website and oversees all print/digital sales, branding, and social media marketing</li>
                     <li class="col-12 col-sm-12">Handles all administrative and financial responsibilities</li>
@@ -134,11 +134,11 @@
                     <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View the WCENT Website</a>
                 </article>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Performed vitals, orthostatic testing, and scribed HPIs and assessments for providers</li>
+                    <li class="col-12 col-sm-12">Collected patient vitals, prepared patients for procedures, and scribed for providers</li>
                     <li class="col-12 col-sm-12">Assisted as a circulator during in-office procedures and surgeries</li>
-                    <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive MA guide</li>
+                    <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive medical assisting guide</li>
                     <li class="col-12 col-sm-12">Maintained infection control through instrument sterilization and room prep</li>
-                    <li class="col-12 col-sm-12">Helped develop clinic manuals and updated the practice website</li>
+                    <li class="col-12 col-sm-12">Developed updated clinic manuals and refreshed the practice website</li>
                     <li class="col-12 col-sm-12">Supported patient care by assisting with check-ins, answering questions, and ensuring clinic flow</li>
                 </ul>
             </article>
@@ -156,7 +156,7 @@
                 </article>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Collaborated with band directors to enhance performances through choreography and leadership mentoring during two marching band seasons (8 hrs/week)</li>
-                    <li class="col-12 col-sm-12">Led sectional rehearsals and full-band practices for 80 students, offering real-time feedback and personalized instruction</li>
+                    <li class="col-12 col-sm-12">Assisted with sectional rehearsals and full-band practices for 80 students, offering real-time feedback and personalized instruction</li>
                     <li class="col-12 col-sm-12">Created a disciplined yet supportive learning environment</li>
                     <li class="col-12 col-sm-12">Filmed and edited performances to assist directors with strategic review and support student growth</li>
                 </ul>
@@ -167,17 +167,17 @@
                     <h1 class="col-12 col-sm-12 e-titles">Scouting Mentor</h1>
                     <p class="col-12 col-sm-12 e-co">Boy Scouts of America</p>
                     <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                    <p class="col-12 col-sm-12 e-time">Feb. 2023 - Nov. 2023</p>
+                    <p class="col-12 col-sm-12 e-time">Nov. 2022 - Nov. 2023</p>
                 </section>
                 <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                     <img id="mea" class="col-12 col-sm-12 col-lg-7" src="Boy-Scout-Logo.png" onMouseDown="popupMsg('Please do not download this image')">
                     <a href="https://www.danielboonecouncil.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View the Daniel Boone Council website</a>
                 </article>
                 <ul class="col-12 col-sm-12"> 
-                    <li class="col-12 col-sm-12">Mentored 30 Scouts, ages 10-18, guiding them through rank advancements toward Eagle Scout</li>
-                    <li class="col-12 col-sm-12">Worked with district leaders to advise on rank progression and Eagle Scout requirements</li>
-                    <li class="col-12 col-sm-12">Taught outdoor adventuring, STEM, photography, and environmental awareness, adapting instruction to various learning styles</li>
-                    <li class="col-12 col-sm-12">Provided tailored support for Scouts completing their Eagle Scout projects</li>
+                    <li class="col-12 col-sm-12">Mentored 30 Scouts, ages 10-18, through rank advancements toward Eagle Scout</li>
+                    <li class="col-12 col-sm-12">Worked with district leaders monthly to update Troop leaders on opportunities within the council</li>
+                    <li class="col-12 col-sm-12">Taught subjects such as outdoor adventuring, STEM, and other Scouting skills, adapting instruction to various learning styles</li>
+                    <li class="col-12 col-sm-12">Provided tailored support for Scouts completing Eagle Scout projects</li>
                     <li class="col-12 col-sm-12">Served as a Merit Badge Counselor for photography in the Daniel Boone Council</li>
                 </ul>
             </article>
@@ -194,11 +194,11 @@
                     <a href="https://mountaineye.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View the MEA Website</a>
                 </article>
                 <ul class="col-12 col-sm-12"> 
-                    <li class="col-12 col-sm-12">Performed refractions, OCT, and visual field testing to identify visual impairments</li>
-                    <li class="col-12 col-sm-12">Cleaned and sterilized instruments and prepared rooms for exams and procedures, maintaining infection control</li>
-                    <li class="col-12 col-sm-12">Educated patients on surgical preparation, risks, and recovery</li>
+                    <li class="col-12 col-sm-12">Performed refractions, retinal and optic nerve imaging, and visual field testing</li>
+                    <li class="col-12 col-sm-12">Cleaned and sterilized instruments and prepared rooms for exams and procedures</li>
+                    <li class="col-12 col-sm-12">Educated patients on surgical preparation, risks, and recovery for cataract surgery and laser procedures</li>
                     <li class="col-12 col-sm-12">Assisted as a circulator during in-office procedures and surgeries</li>
-                    <li class="col-12 col-sm-12">Volunteered at rural community screenings, testing vision, checking pressures, and distributing donated glasses to underserved populations</li>                    
+                    <li class="col-12 col-sm-12">Volunteered in rural community screenings, testing vision, checking eye pressures, and distributing donated glasses to underserved populations</li>                    
                 </ul>
             </article>
 
@@ -257,11 +257,10 @@
                     <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Learn about the CCSSC</a>
                 </article>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Developed understanding of how cultural backgrounds, values, and ethical principles can shape people's health care decisions and behavior</li>
-                    <li class="col-12 col-sm-12">Served as a resource staying up-to-date on the latest safe practices and guidelines to help people stay healthy and informed</li>
-                    <li class="col-12 col-sm-12">Participated to reduce COVID-19 prevalence in the Chapel Hill community</li>
-                    <li class="col-12 col-sm-12">Assisted in maintaining the continuity of UNC Chapel Hill's operations during the COVID-19 pandemic, serving the university's students, faculty, and staff</li>
-                    <li class="col-12 col-sm-12">Communicated effectively and respectfully with a diverse population, ensuring assistance and support</li>
+                    <li class="col-12 col-sm-12">Served as a testing volunteer for the Carolina Student Services Corp, a team operating to mitigate challenges created by the COVID-19 pandemic in the Chapel Hill community and on campus</li>
+                    <li class="col-12 col-sm-12">Witnessed the importance of COVID-19 testing to help manage the spread of the pandemic, happily serving to facilitate this process</li>
+                    <li class="col-12 col-sm-12">Served as a resource on COVID-19 safety practices, keeping up to date on testing and prevention guidelines</li>
+                    <li class="col-12 col-sm-12">Checked individuals into the clinic, demonstrated testing technique, collected laboratory specimens, sent specimens for PCR testing, and instructed individuals how to obtain results</li>
                 </ul>
             </article>
             
