--- a/printing.html
+++ b/printing.html
@@ -73,12 +73,27 @@
                     <p class="col-12 col-sm-12 e-time">Sept. 2024 - Present</p>
                 </section>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Performs OCT, visual field, cataract biometry testing, and slit lamp exams</li>
+                    <li class="col-12 col-sm-12">Performs retinal and optic nerve imaging, visual field, cataract biometry testing, and slit lamp exams</li>
                     <li class="col-12 col-sm-12">Supports patients with low vision by optimizing testing and documentation</li>
                     <li class="col-12 col-sm-12">Assists physicians in high-volume retina and glaucoma clinics</li>
                     <li class="col-12 col-sm-12">Manages urgent cases with adaptability</li>
                     <li class="col-12 col-sm-12">Maintains infection control by cleaning instruments and preparing rooms</li>
                     <li class="col-12 col-sm-12">Volunteers at urban eye screenings, testing vision, checking pressures, and distributing glasses to underserved populations</li>
+                </ul>
+            </article>
+
+            <article style="margin-top: 2em" class="col-12 col-sm-12 col-lg-12 e-about job">
+                <section class="col-11 col-sm-12">
+                    <h1 class="col-12 col-sm-12 e-titles">Patient Experience Volunteer</h1>
+                    <p class="col-12 col-sm-12 e-co">Duke University Hospital<p>
+                    <p class="col-12 col-sm-12 e-location">Durham, North Carolina</p>
+                    <p class="col-12 col-sm-12 e-time">Nov. 2024 - Present</p>
+                </section>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Awarded “2025 Most Supportive Volunteer” by the Duke University Hospital</li>
+                    <li class="col-12 col-sm-12">Supports patient experience on two hospital units by stocking 32 rooms, providing snacks, assisting with meals, and communicating patient needs to nurses</li>
+                    <li class="col-12 col-sm-12">Builds rapport with patients through conversation and companionship</li>
+                    <li class="col-12 col-sm-12">Organizes morale-boosting activities for nurses and serves as a supportive presence during demanding shifts</li>
                 </ul>
             </article>
 
@@ -91,26 +106,11 @@
                     <p class="col-12 col-sm-12 e-time">Mar. 2016 - Present</p>
                 </section>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Operates a self-run photography business focused on portraits, landscapes, wildlife, and fine art</li>
+                    <li class="col-12 col-sm-12">Operates a self-run photography business in portraits and fine art</li>
                     <li class="col-12 col-sm-12">Collaborates with clients to create personalized images and edits using Adobe Lightroom and Photoshop</li>
                     <li class="col-12 col-sm-12">Manages a custom website and oversees all print/digital sales, branding, and social media marketing</li>
                     <li class="col-12 col-sm-12">Handles all administrative and financial responsibilities</li>
                     <li class="col-12 col-sm-12">Presented an international exhibit in Romania (2024) highlighting cultural themes through light, nature, and architecture</li>                    
-                </ul>
-            </article>
-
-            <article style="margin-top: 3em" class="col-12 col-sm-12 col-lg-12 e-about job">
-                <section class=" col-11 col-sm-12">
-                    <h1 class="col-12 col-sm-12 e-titles">Visual & Media Coordinator</h1>
-                    <p class="col-12 col-sm-12 e-co">Tuscola High School Marching Band</p>
-                    <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                    <p class="col-12 col-sm-12 e-time">Aug. 2023 - Dec. 2023</p>
-                </section>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Collaborated with band directors to enhance performances through choreography and leadership mentoring during two marching band seasons (8 hrs/week)</li>
-                    <li class="col-12 col-sm-12">Led sectional rehearsals and full-band practices for 80 students, offering real-time feedback and personalized instruction</li>
-                    <li class="col-12 col-sm-12">Created a disciplined yet supportive learning environment</li>
-                    <li class="col-12 col-sm-12">Filmed and edited performances to assist directors with strategic review and support student growth</li>
                 </ul>
             </article>
 
@@ -122,11 +122,11 @@
                     <p class="col-12 col-sm-12 e-time">May 2023 - June 2024</p>
                 </section>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Performed vitals, orthostatic testing, and scribed HPIs and assessments for providers</li>
+                    <li class="col-12 col-sm-12">Collected patient vitals, prepared patients for procedures, and scribed for providers</li>
                     <li class="col-12 col-sm-12">Assisted as a circulator during in-office procedures and surgeries</li>
-                    <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive MA guide</li>
+                    <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive medical assisting guide</li>
                     <li class="col-12 col-sm-12">Maintained infection control through instrument sterilization and room prep</li>
-                    <li class="col-12 col-sm-12">Helped develop clinic manuals and updated the practice website</li>
+                    <li class="col-12 col-sm-12">Developed updated clinic manuals and refreshed the practice website</li>
                     <li class="col-12 col-sm-12">Supported patient care by assisting with check-ins, answering questions, and ensuring clinic flow</li>
                 </ul>
             </article>
@@ -139,11 +139,11 @@
                     <p class="col-12 col-sm-12 e-time">May 2022 - Apr. 2023</p>
                 </section>
                 <ul class="col-12 col-sm-12"> 
-                    <li class="col-12 col-sm-12">Performed refractions, OCT, and visual field testing to identify visual impairments</li>
-                    <li class="col-12 col-sm-12">Cleaned and sterilized instruments and prepared rooms for exams and procedures, maintaining infection control</li>
-                    <li class="col-12 col-sm-12">Educated patients on surgical preparation, risks, and recovery</li>
+                    <li class="col-12 col-sm-12">Performed refractions, retinal and optic nerve imaging, and visual field testing</li>
+                    <li class="col-12 col-sm-12">Cleaned and sterilized instruments and prepared rooms for exams and procedures</li>
+                    <li class="col-12 col-sm-12">Educated patients on surgical preparation, risks, and recovery for cataract surgery and laser procedures</li>
                     <li class="col-12 col-sm-12">Assisted as a circulator during in-office procedures and surgeries</li>
-                    <li class="col-12 col-sm-12">Volunteered at rural community screenings, testing vision, checking pressures, and distributing donated glasses to underserved populations</li>                    
+                    <li class="col-12 col-sm-12">Volunteered in rural community screenings, testing vision, checking eye pressures, and distributing donated glasses to underserved populations</li>                    
                 </ul>
             </article>
 
@@ -186,11 +186,10 @@
                     <p class="col-12 col-sm-12 e-time">Aug. 2021 - Dec. 2021 / Jan. 2022 - Apr. 2022</p>
                 </section>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Developed understanding of how cultural backgrounds, values, and ethical principles can shape people's health care decisions and behavior</li>
-                    <li class="col-12 col-sm-12">Served as a resource staying up-to-date on the latest safe practices and guidelines to help people stay healthy and informed</li>
-                    <li class="col-12 col-sm-12">Participated to reduce COVID-19 prevalence in the Chapel Hill community</li>
-                    <li class="col-12 col-sm-12">Assisted in maintaining the continuity of UNC Chapel Hill's operations during the COVID-19 pandemic, serving the university's students, faculty, and staff</li>
-                    <li class="col-12 col-sm-12">Communicated effectively and respectfully with a diverse population, ensuring assistance and support</li>
+                    <li class="col-12 col-sm-12">Served as a testing volunteer for the Carolina Student Services Corp, a team operating to mitigate challenges created by the COVID-19 pandemic in the Chapel Hill community and on campus</li>
+                    <li class="col-12 col-sm-12">Witnessed the importance of COVID-19 testing to help manage the spread of the pandemic, happily serving to facilitate this process</li>
+                    <li class="col-12 col-sm-12">Served as a resource on COVID-19 safety practices, keeping up to date on testing and prevention guidelines</li>
+                    <li class="col-12 col-sm-12">Checked individuals into the clinic, demonstrated testing technique, collected laboratory specimens, sent specimens for PCR testing, and instructed individuals how to obtain results</li>
                 </ul>
             </article>
 
@@ -216,20 +215,21 @@
         <section class="col-12 col-sm-12 group act-border">
             <article class="activity col-3 col-sm-3 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Patient Experience Volunteer</h4>
-                <p class="col-12 col-sm-12 e-time">Duke University Hospital - North Tower</p>
+                <p class="col-12 col-sm-12 e-time">Duke University Hospital</p>
                 <p class="col-12 col-sm-12 e-time">"2025 Most Supportive Volunteer"</p>
                 <p class="col-12 col-sm-12 e-time">Nov. 2024 - Present</p>
             </article>
             <article class="activity col-3 col-sm-3 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Field Instructor & Videographer</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Visual & Media Coordinator</h4>
                 <p class="col-12 col-sm-12 e-time">Tuscola High School Marching Band</p>
                 <p class="col-12 col-sm-12 e-time">July 2023 - Dec. 2023,</p>
                 <p class="col-12 col-sm-12 e-time">Aug. 2024 - Sept. 2024</p>
             </article>
             <article class="activity col-3 col-sm-3 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Scout Advancement Mentor</h4>
-                <p class="col-12 col-sm-12 e-time">BSA Troop 370: Waynesville, NC</p>
-                <p class="col-12 col-sm-12 e-time">Nov. 2022 - May 2023</p>
+                <h4 class="col-12 col-sm-12 e-titles">Scouting Mentor</h4>
+                <p class="col-12 col-sm-12 e-time">Boy Scouts of America - Troop 370</p>
+                <p class="col-12 col-sm-12 e-time">Clyde, North Carolina</p>
+                <p class="col-12 col-sm-12 e-time">Nov. 2022 - Nov 2023</p>
             </article>
             <article class="activity col-3 col-sm-3 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">UNC Red Cross Club</h4>
@@ -242,7 +242,7 @@
             <article class="cert col-4 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Basic Life Support (CPR and AED)</h4>
                 <h5 class="col-12 col-sm-12 e-co">American Heart Association</h5>
-                <h5 class="col-12 col-sm-12 e-co"><i>Expires Sept. 2026</i></h5>
+                <h5 class="col-12 col-sm-12 e-co"><i>Exp. Sept. 2026</i></h5>
             </article>
             <article class="cert col-4 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">2025 Volunteer Award<br>"Most Supportive Volunteer"</h4>
