--- a/education.html
+++ b/education.html
@@ -60,31 +60,34 @@
     <main class="row">
         <section class="col-12 col-sm-12 experience">
 
-            <h2 class="col-12 col-sm-12 e-titles">Bachelor's Degree</h2>
+            <h2 class="col-12 col-sm-12 e-titles">High School Diploma</h2>
+
+            <article class="col-12 col-sm-12 col-lg-12 e-about">
+                <img id="ths" class="col-12 col-sm-10 col-lg-10" src="ths.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Waynesville, North Carolina</p>
+                <p class="col-12 col-sm-12">August 2014 - June 2018</p>
+            </article>
+
+            <h2 class="col-12 col-sm-12 e-titles">Baccalaureate</h2>
 
             <article class="col-12 col-sm-12 col-lg-12 e-about">
                 <img id="unc" class="col-12 col-sm-10 col-lg-8" src="unc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h3 class="e-co ">Bachelor of Science in Biology<br><span>Chemistry & Neuroscience Minors</span></h3>
                 <p class="col-12 col-sm-12">Chapel Hill, North Carolina</p>
-                <p class="col-12 col-sm-12">August 2018 - May 2022</p>
+                <p class="col-12 col-sm-12">08/21/2018 - 05/08/2022</p>
             </article>
 
-            <h2 class="col-12 col-sm-12 e-titles">Post-Baccalaureate Courses</h2>
+            <h2 class="col-12 col-sm-12 e-titles">Post-Baccalaureate</h2>
 
-            <article class="col-12 col-sm-12 col-lg-6 e-about">
-                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="ncsu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
-                <p class="col-12 col-sm-12">Human Anatomy & Physiology I</p>
-                <p class="col-12 col-sm-12">May 2023 - June 2023</p>
-            </article>
-            <article class="col-12 col-sm-12 col-lg-6 e-about">
-                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="ecu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
-                <p class="col-12 col-sm-12">Human Genetics / General Physics II</p>
-                <p class="col-12 col-sm-12">May 2021 - June 2023</p>
-            </article>
             <article class="col-12 col-sm-12 col-lg-6 e-about">
                 <img id="scc" class="col-12 col-sm-10 col-lg-11" src="sandhillscc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
                 <p class="col-12 col-sm-12">Microbiology</p>
                 <p class="col-12 col-sm-12">August 2023 - December 2023</p>
+            </article>
+            <article class="col-12 col-sm-12 col-lg-6 e-about">
+                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="ncsu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Human Anatomy & Physiology I</p>
+                <p class="col-12 col-sm-12">May 2023 - June 2023</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-6 e-about">
                 <img id="scc" class="col-12 col-sm-10 col-lg-11" src="scc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
@@ -97,13 +100,17 @@
                 <p class="col-12 col-sm-12">Professional Interactions in Healthcare</p>
                 <p class="col-12 col-sm-12">August 2022 - May 2023</p>
             </article>
+            <article class="col-12 col-sm-12 col-lg-6 e-about">
+                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="ecu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Human Genetics / General Physics II</p>
+                <p class="col-12 col-sm-12">May 2021 - June 2023</p>
+            </article>
 
-            <h2 class="col-12 col-sm-12 e-titles">High School Diploma</h2>
+            <h2 class="col-12 col-sm-12 e-titles">CASPA Calculated GPA</h2>
 
             <article class="col-12 col-sm-12 col-lg-12 e-about">
-                <img id="ths" class="col-12 col-sm-10 col-lg-10" src="ths.png" onMouseDown="popupMsg('Please do not download this image')">
-                <p class="col-12 col-sm-12">Waynesville, North Carolina</p>
-                <p class="col-12 col-sm-12">August 2014 - June 2018</p>
+                <p class="col-12 col-sm-12">CASPA 2025-2026 Cycle</p>
+                <img id="caspa" class="col-12 col-sm-10 col-lg-10" src="CASPA_GPAs.jpg">
             </article>
         </section>
     </main>
