--- a/experience.html
+++ b/experience.html
@@ -98,7 +98,7 @@
                 <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Photographer</h1>
                     <p class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</p>
-                    <p class="col-12 col-sm-12 e-location">Community, Collaboration, Creativity</p>
+                    <p class="col-12 col-sm-12 e-location" style="font-style: italic;">"Community, Collaboration, Creativity"</p>
                     <p class="col-12 col-sm-12 e-location">Portraits & Nature Photography</p>
                     <p class="col-12 col-sm-12 e-time">03/1/2016 - Present</p>
                 </section>
@@ -145,7 +145,7 @@
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <section class="job col-11 col-sm-12">
-                    <h1 class="col-12 col-sm-12 e-titles">Marchinng Band Assistant & Media Specialist</h1>
+                    <h1 class="col-12 col-sm-12 e-titles">Marching Band Assistant & Media Specialist</h1>
                     <p class="col-12 col-sm-12 e-co">Tuscola High School Marching Band</p>
                     <p class="col-12 col-sm-12 e-location">Waynesville, North Carolina</p>
                     <p class="col-12 col-sm-12 e-time">08/15/2023 - 09/30/2024</p>
