--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="index.html">Home</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
                     </li>
                     <li class="col-12 col-md-3 nav-item">
-                        <a class="nav-link" href="education.html">Education</a>
+                        <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
-                        <a class="nav-link" href="experience.html">Experience</a>
+                        <a class="nav-link" href="education.html">Education</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="https://stephenawenzel.github.io/photography/">Photography</a>
@@ -60,13 +60,13 @@
     
     <main class="row">
         <section id="content" class="col-12 col-sm-12 col-lg-12">
-            <article class="col-12 col-sm-6 col-lg-4 headshot_box">
-                <img id="headshot" src="transparent_headshot.png" onMouseDown="popupMsg('Please do not download this image')">
-            </article>
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 mt-2 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Please do not download this image')">
                 <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">INTERACTIVE, ONLINE RESUME</p>
                 <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">June 2025 Update</p>
+                <p id="coded" class="col-12 col-sm-12 col-lg-12 text-center">
+                    This website was programmed by Stephen Wenzel.
+                </p>
             </article>
         </section>
     </main>
