--- a/printing.html
+++ b/printing.html
@@ -26,24 +26,22 @@
 
 <header class="container">
     <div class="row buttons">
-        <p class="col-11 col-sm-8">
-            Click the button below to download my resume as a PDF document</p>
-        <a href="StephenWenzel_062025.pdf" download class="btn btn-info col-7 col-sm-7 mb-3">Download PDF version</a>
+        <p class="col-11 col-sm-8">Click to download a PDF of my resume</p>
+        <a href="StephenWenzel_062025.pdf" download class="btn btn-info col-7 col-sm-7 mb-3">Download PDF of Stephen's resume</a>
         <a href="index.html" role="button" class="btn btn-info col-7 col-sm-7 mt-3">Return to Homepage</a>
     </div>
 </header>
+
 <main class="container-fluid">
     
     <article class="row">
         <section class="col-6 col-sm-6 header-content">
-            <img id="header_img" src="transparent_headshot.png">
-            <article id="header_info_box" class="col-8 col-sm-8">
-                <h1 class="col-12 col-sm-12 text-center">Stephen A. Wenzel</h1>
-                <a class="col-12 col-sm-12 text-center" id="location">Durham, North Carolina</a>
-                <a class="col-12 col-sm-12 text-center" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
-                <a class="col-12 col-sm-12 text-center" id="phone" href="tel:8287344555">828-734-4555</a>
-                <p style="margin: 0; padding: 0;" class="col-12 col-sm-12 text-center">View online, interactive resume below:</p>
-                <a class="col-12 col-sm-12 text-center" id="website">stephenawenzel.github.io/resume</a>
+            <article id="header_info_box" class="col-12 col-sm-12">
+                <h1 class="col-12 col-sm-12">Stephen A. Wenzel</h1>
+                <a class="col-12 col-sm-12" id="location">Durham, North Carolina</a>
+                <a class="col-12 col-sm-12" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
+                <a class="col-12 col-sm-12" id="phone" href="tel:8287344555">828-734-4555</a>
+                <a class="col-12 col-sm-12" id="website">View my online, interactive resume at stephenawenzel.github.io/resume</a>
             </article>
         </section>
         <section id="education" class="col-6 col-sm-6 experience">
