--- a/experience.html
+++ b/experience.html
@@ -101,7 +101,7 @@
                     <p class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</p>
                     <p class="col-12 col-sm-12 e-location" style="font-style: italic;">"Community, Collaboration, Creativity"</p>
                     <p class="col-12 col-sm-12 e-location">Portraits & Nature Photography</p>
-                    <p class="col-12 col-sm-12 e-time">03/1/2016 - Present</p>
+                    <p class="col-12 col-sm-12 e-time">03/01/2016 - Present</p>
                 </section>
                 <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                     <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="talents.jpg" onMouseDown="popupMsg('Please do not download this image')">
@@ -180,11 +180,12 @@
                     <h1 class="col-12 col-sm-12 e-titles">Assistant Scoutmaster Volunteer</h1>
                     <p class="col-12 col-sm-12 e-co">Boy Scouts of America</p>
                     <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                    <p class="col-12 col-sm-12 e-time">Nov. 2022 - Nov. 2023</p>
+                    <p class="col-12 col-sm-12 e-time">10/11/2022 - 10/31/2023</p>
                 </section>
                 <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                     <img id="scouts" class="col-12 col-sm-12 col-lg-7" src="Boy-Scout-Logo.png" onMouseDown="popupMsg('Please do not download this image')">
                     <a href="https://www.danielboonecouncil.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View the Daniel Boone Council website</a>
+                    <a href="https://www.danielboonecouncil.org/instructor-name" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Merit Badge Counselor Directory</a>
                 </article>
                 <ul class="col-12 col-sm-12"> 
                     <li class="col-12 col-sm-12">Mentored 30 Scouts, ages 10-18, through rank advancements toward Eagle Scout</li>
@@ -200,7 +201,7 @@
                     <h1 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Mountain Eye Associates</p>
                     <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                    <p class="col-12 col-sm-12 e-time">May 2022 - Apr. 2023</p>
+                    <p class="col-12 col-sm-12 e-time">05/16/2022 - 04/26/2023</p>
                 </section>
                 <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                     <img id="mea" class="col-12 col-sm-12 col-lg-7" src="MEA.jpg" onMouseDown="popupMsg('Please do not download this image')">
@@ -260,7 +261,7 @@
                 </section>
                 <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                     <img id="cssc_pic" class="col-12 col-sm-12 col-lg-7" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="cssc_50.png" onMouseDown="popupMsg('Please do not download this image')">
-                    <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Learn about the CCSSC</a>
+                    <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Learn about the CSSC</a>
                 </article>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Guided students and staff of the UNC community through COVID-19 testing during the COVID-19 pandemic</li>
