--- a/printing.html
+++ b/printing.html
@@ -22,8 +22,8 @@
 
 <header class="container">
     <div class="row buttons">
-        <p class="col-11 col-sm-8">Click to download a PDF of my CV / resume</p>
-        <a href="June_2025_Resume-Stephen_Wenzel.pdf" download class="btn btn-info col-7 col-sm-7 mb-3">Download PDF</a>
+        <p class="col-11 col-sm-8">Click to download as a PDF:</p>
+        <a href="CV_Resume-Stephen_Andrei_Wenzel-CASPA.pdf" download class="btn btn-info col-7 col-sm-7 mb-3">CV / Resume</a>
         <a href="index.html" role="button" class="btn btn-info col-7 col-sm-7 mt-3">Return to Homepage</a>
     </div>
 </header>
